sjengida/g2/calc_attackers
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/calc_attackers/src/attacks.c:503:16: error: use of undeclared identifier 'rook_o_8'
v3 = ( void **)rook_o_8; 
               ^
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/calc_attackers/src/attacks.c:531:12: error: use of undeclared identifier 'jpt_40352C'
if ( v3 == jpt_40352C ) 
           ^
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/calc_attackers/src/attacks.c:538:21: error: use of undeclared identifier 'bishop_o_7'
for ( i = 11; ; i = bishop_o_7[v14] ) 
                    ^
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/calc_attackers/src/attacks.c:548:6: error: use of undeclared identifier 'knight_o_6'
v8 = knight_o_6 + 4; 
     ^
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/calc_attackers/src/attacks.c:553:12: error: use of undeclared identifier 'bishop_o_7'
if ( v8 == bishop_o_7 ) 
           ^
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/calc_attackers/src/attacks.c:607:6: error: use of undeclared identifier 'jpt_40352C'
if ( jpt_40352C == v3 ) 
     ^
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/calc_attackers/src/attacks.c:614:21: error: use of undeclared identifier 'bishop_o_7'
for ( k = 11; ; k = bishop_o_7[v18] ) 
                    ^
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/calc_attackers/src/attacks.c:648:7: error: use of undeclared identifier 'knight_o_6'
v22 = knight_o_6 + 4; 
      ^
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/calc_attackers/src/attacks.c:653:6: error: use of undeclared identifier 'bishop_o_7'
if ( bishop_o_7 == v22 ) 
     ^
9 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/calc_attackers/src/obj/attacks.o] Error 1
